<resources>
    <string name="app_name">Life register: Diario</string>
    <string name="app_diary">Diario</string>
    <string name="app_calendar">calendario</string>
    <string name="app_drugs">Drugs</string>
    <string name="app_economy">Economia</string>
    <string name="app_time_inver">Insersión de tiempo</string>
    <string name="app_feelings">Registro de sentimientos</string>
    <string name="app_graphics">Graficas y estadisticas</string>
    <string name="app_settings">Configuraciones</string>
    <string name="app_help">Ayuda</string>
    <string name="app_hour">Hora</string>
    <string name="app_day">día</string>
    <string name="app_month">mes</string>
    <string name="app_year">año</string>
    <string name="app_gender_male">masculino</string>
    <string name="app_gender_female">femenino</string>
    <string name="app_activity">Actividad</string>
    <string name="app_user_description">Descripción del usuario: </string>
    <string name="app_username">Nombre de usuario: </string>
    <string name="app_sex">Genero: </string>
    <string name="app_enter_message">Mensaje... </string>
    <string name="app_age">Edad: </string>
    <string name="app_enter_password">Ingrese secret password: </string>
    <string name="app_birth_date">Fecha de nacimiento: </string>
    <string name="app_banner_feelings">Como te sentiste hoy?</string>
    <string name="app_register_mesage_1">Hola, Soy tu diario...</string>
    <string name="app_register_mesage_2">Bienvenido nuevo usuario.\n\n- Vamos a compartir.</string>
    <string name="app_register_mesage_3">Vamos a presentarnos</string>
    <string name="app_register_mesage_4">Dime cual es tu nombre?</string>
    <string name="app_register_mesage_5">Eres chico o chica?</string>
    <string name="app_register_mesage_6">Fecha de nacimiento</string>
    <string name="app_litle_box_status">Caja menor:</string>
    <string name="app_big_box_status">Caja mayor:</string>
    <string name="app_mounth_name">Mes actual</string>
    <string name="lbl_help_calendar_banner_tipe_of_view">Selecciona el tipo de vista:</string>
    <string name="lbl_help_calendar_banner">Esta es la vista anual.\nAqui podras ver como va tu año.</string>
    <string name="lbl_help_calendar_choose_month">Selecciona el mes del año:</string>
    <string name="lbl_box_help_banner">Aquí puedes ingresar la cantidad que tienes en los bolsillos (caja menor) ó la cantidad que tienes ahorrada (caja mayor)</string>
    <string name="lbl_help_banner_list_of_activities">Está es la lista de actividades que realizas las 24 horas del día.\nEdita, Agrega ó elimina actividades.</string>
    <string name="lbl_help_banner_list_of_Drugs">Está es la lista de drogas que tu consumes.\nEdita, Agrega ó elimina drogas.</string>
    <string name="lbl_help_banner_list_of_feelings">Está es la lista de tus sentimientos.\nEdita, Agrega ó elimina drogas.</string>
    <string name="lbl_help_dream_diary_banner">Este es tu diario de sueños, aqui puedes escribir lo que sueñas. </string>
    <string name="lbl_help_drug_counter">Este es un contador de psicoactivos.\nCada vez que consumas, seleccionalo y luego dale al botón + </string>
    <string name="lbl_economy_concep">Concepto: </string>
    <string name="lbl_economy_debit">Debe: </string>
    <string name="lbl_economy_credit">Haber: </string>
    <string name="lbl_activities_list">Lista de actividades: </string>
    <string name="lbl_feelings_list">Lista de sentimientos: </string>
    <string name="lbl_feelinfs_report">Reporte de sentimientos: </string>
    <string name="lbl_economy_report">Reporte economico: \nIngresos vs Egresos</string>
    <string name="lbl_economy_search_money">Ingrese el concepto monetario a buscar:</string>
    <string name="lbl_time_distribution_report">Reporte inversión de tiempo: </string>
    <string name="lbl_drugs_list">Lista de drogas: </string>
    <string name="lbl_help_insert_title">Ingrese Nombre psicoactivo</string>
    <string name="lbl_help_insert_psichoactive">Psicoactivo:</string>
    <string name="lbl_detonant">detonante:</string>
    <string name="lbl_help_detonant">Que situación ocurrio para detonar el consumo?</string>
    <string name="lbl_result">resultado:</string>
    <string name="lbl_help_result">Que te provoco emocional o fisicamente?</string>
    <string name="lbl_keyword">Palabra magica:</string>
    <string name="lbl_help_insert_keyword">Ingrese tirulo...</string>
    <string name="lbl_help_insert_history">Ingresa tu historia...</string>
    <string name="lbl_help_insert_history_gratitude">Ingresa algo por lo que estes agradecido...</string>
    <string name="lbl_help_insert_title_dream">Ingresa titulo de tu sueño...</string>
    <string name="lbl_help_insert_dream">Ingresa tu sueño...</string>
    <string name="output">This is a system message: ....</string>
    <string name="btnLoad">Cargar</string>
    <string name="btnSave">Guardar</string>
    <string name="btnSearch">Buscar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnContinue">Continuar</string>
    <string name="btnEditProfile">Perfil</string>
    <string name="btnEditActivities">Actividades</string>
    <string name="btnEditFeelings">Sentimientos</string>
    <string name="btnEditDrugList">Listado de drogas</string>
    <string name="btnHelpUserManual">Manual del usuario</string>
    <string name="btnHelpPosibilities">Listado de posibilidades</string>
    <string name="btnHelpPrograming">Como estoy programado</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>


</resources>