<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".Drug_Diary">


    <EditText
        android:id="@+id/txt_Title_drug_diary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_help_insert_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_detonant"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textImeMultiLine"
        android:hint="@string/lbl_help_detonant"
        android:gravity="top"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_result"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="textImeMultiLine"
        android:hint="@string/lbl_help_result"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>











</LinearLayout>