<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".Personal_diary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/lbl_keyword" />

        <EditText
            android:id="@+id/txtInsertTitlePageDiary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/lbl_help_insert_keyword" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/saveDiaryPage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSave"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <Button
            android:id="@+id/loadDiaryPage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnLoad"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20sp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/txtInsertHistoryPageDiary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:hint="@string/lbl_help_insert_history" />




</LinearLayout>