<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".TimeDistribution">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/green"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_hour" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/app_activity" />

        <Button
            android:id="@+id/saveDiaryActivities"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:shadowColor="@color/blue"
            android:layout_weight="1"
            android:text="@string/btnSave" />
    </LinearLayout>


    <ListView
        android:id="@+id/listViewTimeInversion"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>