<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".Gratirude_Diary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_help_insert_history"/>

        <EditText
            android:id="@+id/txtGratitudeHistory"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/lbl_help_insert_history_gratitude"
            android:gravity="top"/>

        <Button
            android:id="@+id/saveGratitudePage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btnSave"/>

    </LinearLayout>



</LinearLayout>