<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/scrollViewregister"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/registerPage0">

                <ImageView
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/avatar_uwu"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_1"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_2"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/btnContinue"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_3"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/registerPage1">

                <ImageView
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/avatar_uwu"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_4"
                    android:layout_marginBottom="20dp"/>

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="90dp"
                    android:hint="username" />

                <Button
                    android:id="@+id/btnCreateNickName"
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/btnContinue"
                    />




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/registerPage2">

                <ImageView
                    android:id="@+id/sex_avatar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/avatar_uwu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_5"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="40dp">

                    <ImageButton
                        android:id="@+id/sexMale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/btn_male"
                        android:scaleType="fitCenter"
                        android:background="@null"/>

                    <ImageButton
                        android:id="@+id/sexFemale"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/btn_female"
                        android:scaleType="fitCenter"
                        android:background="@null"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/lblYeartToBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_register_mesage_6"/>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerRegisterDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Spinner
                        android:id="@+id/spinnerRegisterMouhtns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:id="@+id/spinnerRegisterYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <Button
                    android:id="@+id/btnSuccesfullRegister"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/btnContinue"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>